# colab-cli

./: .gitignore  CHANGELOG.md  Cargo.toml  README.md  build.rs  install.sh  plan.md  shipyard.toml
.github/workflows/: benchmark.yml  ci.yml  release.yml  shipyard-release.yml
benches/: continuation.rs  core.rs  hot_paths.rs  manifest.rs
crates/cocli-colab/: Cargo.toml  README.md
crates/cocli-core/: Cargo.toml  README.md
crates/cocli-core/benches/: core.rs
crates/cocli-core/src/: lib.rs
crates/cocli-fs/: Cargo.toml  README.md
crates/cocli-fs/benches/: manifest.rs
crates/cocli-fs/src/: lib.rs
crates/cocli-protocol/: Cargo.toml  README.md
crates/cocli-protocol/benches/: continuation.rs
crates/cocli-protocol/src/: lib.rs
crates/cocli-tools/: Cargo.toml  README.md
crates/cocli-tools/src/: lib.rs
crates/colab-cli/: Cargo.toml  README.md  build.rs
crates/colab-cli/benches/: hot_paths.rs
crates/colab-cli/src/: cli.rs  error.rs  lib.rs  main.rs  shell.rs
crates/colab-cli/src/auth/: mod.rs  oauth.rs  storage.rs
crates/colab-cli/src/client/: api.rs  mod.rs
crates/colab-cli/src/server/: storage.rs
crates/colab-cli/src/ui/: mod.rs
docs/: ai.md  architecture.md  ast-observer.md  auth.md  benchmark-plan.md  benchmark-results.md  ci-cd.md  claims-ledger.md  colabtools-feature-map.md  command-audit.md  commands.md  competitor-matrix.md  continuation.md  debugging.md  decisions.md  distribute.md  drive.md  easter-eggs.md  feature-test-plan.md  google-colab-cli-map.md  kernel.md  live-testing.md  logs.md  maintainer.md  mcp.md  migration-from-google-colab-cli.md  missing-features.md  output-style.md  owner-tools.md  perf-pass.md  performance.md  prune-and-merge-report.md  prune-report.md  publishing.md  qa.md  refactor-map.md  release.md  research-notes.md  research.md  run.md  (+7 more)
docs/audit/: ai-tools.md  auth-drive.md  build-breakers.md  codebase-cleanup.md  colab-transports.md  google-colab-cli-behaviour.md  google-transport-parity.md  public-surface.md  public-vs-experimental.md  qa-results.md  runtime-endpoint-root-cause.md  security-review.md  settings-ui-review.md  ui-review.md  yagni-prune.md
docs/features/: secrets.md
docs/issues/: userdata-cli-secrets.md
examples/: sample.py
scripts/: bench-all.sh  bench-cocli.sh  bench-colab.sh  check-command-surface.sh  live-secrets-smoke.sh  live-smoke.sh
src/: cli.rs  config.rs  embedded.rs  error.rs  lib.rs  main.rs
src/auth/: mod.rs  oauth.rs
src/client/: api.rs  mod.rs
src/cocli/: debug.rs  error.rs  kernel.rs  mod.rs  secrets.rs
src/cocli/agent/: commands.rs
src/cocli/auth/: mod.rs  oauth.rs  profiles.rs  redaction.rs  storage.rs
src/cocli/cli/: args.rs  dispatch.rs  mod.rs  output.rs
src/cocli/config/: file.rs
src/cocli/continue/: manifest.rs  mod.rs  resume.rs
src/cocli/doctor/: checks.rs  commands.rs  mod.rs
src/cocli/env/: commands.rs  mod.rs  packages.rs
src/cocli/exec/: runner.rs
src/cocli/fleet/: compliance.rs  mod.rs  scheduler.rs
src/cocli/fs/: excludes.rs  manifest.rs  mod.rs  sync.rs
src/cocli/mount/: commands.rs
src/cocli/release/: mod.rs  names.rs  notes.rs
src/cocli/runtime/: info.rs
src/cocli/session/: client.rs  commands.rs  mod.rs  model.rs  store.rs
src/cocli/slurp/: config.rs  mod.rs  planner.rs
src/cocli/tools/: commands.rs  mod.rs  registry.rs
src/cocli/ui/: color.rs  error.rs  mod.rs  palette.rs  panel.rs  progress.rs  prompt.rs  table.rs  width.rs
src/cocli/util/: embedded.rs  ids.rs  json.rs  mod.rs  paths.rs  time.rs
src/server/: mod.rs  storage.rs
src/ui/: mod.rs
tests/: cli.rs
