[package]
name = "colab-cli"
version = "0.1.4"
edition = "2024"
rust-version = "1.85"
authors = ["Keys <70819367+keys-i@users.noreply.github.com>"]
description = "Google Colab from the terminal — manage CPU/GPU/TPU runtimes, open interactive shells, and stream files, straight from your shell."
license = "MIT"
readme = "README.md"
repository = "https://github.com/keys-i/colab-cli"
homepage = "https://github.com/keys-i/colab-cli"
keywords = ["colab", "google", "cli", "jupyter", "gpu"]
categories = ["command-line-utilities", "development-tools"]
build = "build.rs"
include = [
    "src/**/*.rs",
    "benches/**/*.rs",
    "build.rs",
    "Cargo.toml",
    "Cargo.lock",
    "LICENSE*",
    "README.md",
]

[[bin]]
name = "colab-cli"
path = "src/main.rs"

[dependencies]
# CLI
clap = { version = "4", features = ["derive", "env"] }
clap_complete = "4"

# Async runtime
tokio = { version = "1", features = ["rt-multi-thread", "macros", "time", "net", "sync", "signal"] }

# HTTP client (rustls — no OpenSSL dep)
reqwest = { version = "0.12", default-features = false, features = ["rustls-tls", "json", "stream", "gzip", "brotli", "http2"] }

# Serialization
serde = { version = "1", features = ["derive"] }
serde_json = "1"
toml = "0.8"

# Types / utilities
uuid = { version = "1", features = ["v4", "serde"] }
base64 = "0.22"
sha2 = "0.10"
getrandom = { version = "0.2", features = ["std"] }
urlencoding = "2"
chrono = { version = "0.4", features = ["serde"] }
dirs = "5"
thiserror = "2"
url = "2"
dotenvy = "0.15"

obfstr = "0.4"

# WebSocket (terminal)
tokio-tungstenite = { version = "0.26", features = ["rustls-tls-webpki-roots"] }
futures-util = "0.3"

# Interactive prompts
dialoguer = { version = "0.11", default-features = false }

# TUI / output
colored = "2"
tabled = { version = "0.17", features = ["ansi"] }
indicatif = "0.17"
crossterm = "0.28"

[dev-dependencies]
tokio-test = "0.4"
tempfile = "3"
criterion = { version = "0.5", features = ["html_reports"] }

[[bench]]
name = "hot_paths"
harness = false

[profile.release]
lto = "fat"
codegen-units = 1
strip = true
opt-level = 3
panic = "abort"
incremental = false
