[workspace]
members = ["crates/*"]
resolver = "3"

[workspace.package]
edition = "2024"
rust-version = "1.85"
authors = ["Keys <70819367+keys-i@users.noreply.github.com>"]
license = "MIT"
repository = "https://github.com/keys-i/colab-cli"
homepage = "https://github.com/keys-i/colab-cli"
keywords = ["colab", "google", "cli", "jupyter", "gpu"]
categories = ["command-line-utilities", "development-tools"]

[workspace.dependencies]
base64 = "0.22"
chrono = { version = "0.4", features = ["serde"] }
clap = { version = "4", features = ["derive", "env"] }
clap_complete = "4"
colored = "2"
criterion = { version = "0.5", features = ["html_reports"] }
crossterm = "0.28"
dialoguer = { version = "0.11", default-features = false }
dirs = "5"
dotenvy = "0.15"
futures-util = "0.3"
getrandom = { version = "0.2", features = ["std"] }
indicatif = "0.17"
obfstr = "0.4"
reqwest = { version = "0.12", default-features = false, features = ["rustls-tls", "json", "stream", "gzip", "brotli", "http2"] }
serde = { version = "1", features = ["derive"] }
serde_json = "1"
sha2 = "0.10"
tabled = { version = "0.17", features = ["ansi"] }
tempfile = "3"
thiserror = "2"
tokio = { version = "1", features = ["rt-multi-thread", "macros", "time", "net", "sync", "signal"] }
tokio-test = "0.4"
tokio-tungstenite = { version = "0.26", features = ["rustls-tls-webpki-roots"] }
toml = "0.8"
url = "2"
urlencoding = "2"
uuid = { version = "1", features = ["v4", "serde"] }

[workspace.lints.rust]
unsafe_code = "forbid"

[profile.release]
lto = "thin"
codegen-units = 1
strip = "symbols"
opt-level = 3
panic = "abort"
incremental = false
