[package]
name = "colab-cli"
version = "0.2.0"
edition = "2024"
rust-version = "1.85"
authors = ["Keys <70819367+keys-i@users.noreply.github.com>"]
description = "Google Colab from the terminal with sessions, code execution, files, Drive, status, auth, logs, and agent-facing tools."
default-run = "colab"
license = "MIT"
readme = "README.md"
repository = "https://github.com/keys-i/colab-cli"
homepage = "https://github.com/keys-i/colab-cli"
keywords = ["colab", "google", "cli", "jupyter", "gpu"]
categories = ["command-line-utilities", "development-tools"]
build = "build.rs"
autobins = false
include = [
    "src/**/*.rs",
    "tests/**/*.rs",
    "benches/**/*.rs",
    "examples/**/*.py",
    "docs/**/*.md",
    "build.rs",
    "Cargo.toml",
    "README.md",
    "LICENSE",
]

[[bin]]
name = "colab"
path = "src/bin/colab.rs"

[[bin]]
name = "colab-cli"
path = "src/bin/colab-cli.rs"

[dependencies]
base64 = "0.22"
chrono = { version = "0.4", features = ["serde"] }
clap = { version = "4", features = ["derive", "env"] }
clap_complete = "4"
colored = "2"
crossterm = "0.28"
dialoguer = { version = "0.11", default-features = false }
dirs = "5"
dotenvy = "0.15"
futures-util = "0.3"
getrandom = { version = "0.2", features = ["std"] }
indicatif = "0.17"
obfstr = "0.4"
reqwest = { version = "0.12", default-features = false, features = ["rustls-tls", "json", "stream", "gzip", "brotli", "http2"] }
serde = { version = "1", features = ["derive"] }
serde_json = "1"
sha2 = "0.10"
tabled = { version = "0.17", features = ["ansi"] }
thiserror = "2"
tokio = { version = "1", features = ["rt-multi-thread", "macros", "time", "net", "sync", "signal"] }
tokio-tungstenite = { version = "0.26", features = ["rustls-tls-webpki-roots"] }
toml = "0.8"
url = "2"
urlencoding = "2"
uuid = { version = "1", features = ["v4", "serde"] }

[features]
default = []
dev-tools = []
owner-tools = ["dev-tools"]
agent-tools = []

[dev-dependencies]
criterion = { version = "0.5", features = ["html_reports"] }
tempfile = "3"
tokio-test = "0.4"

[[bench]]
name = "hot_paths"
harness = false

[[bench]]
name = "core"
harness = false

[[bench]]
name = "manifest"
harness = false

[[bench]]
name = "continuation"
harness = false

[lints.rust]
unsafe_code = "forbid"

[profile.release]
lto = "thin"
codegen-units = 1
strip = "symbols"
opt-level = 3
panic = "abort"
incremental = false
