[package]
name = "cocli-core"
version = "0.2.0"
edition.workspace = true
rust-version.workspace = true
authors.workspace = true
description = "Core config, session lookup, output, and safety utilities for colab-cli."
license.workspace = true
readme = "README.md"
repository.workspace = true
homepage.workspace = true
keywords.workspace = true
categories.workspace = true
include = ["src/**/*.rs", "benches/**/*.rs", "Cargo.toml", "README.md"]

[dependencies]
dirs.workspace = true
serde.workspace = true
serde_json.workspace = true
thiserror.workspace = true
toml.workspace = true

[dev-dependencies]
criterion.workspace = true
tempfile.workspace = true

[[bench]]
name = "core"
harness = false

[lints]
workspace = true
