[package]
name = "cocli-fs"
version = "0.2.0"
edition.workspace = true
rust-version.workspace = true
authors.workspace = true
description = "Local file manifest, diff, and chunk-planning helpers for colab-cli sync."
license.workspace = true
readme = "README.md"
repository.workspace = true
homepage.workspace = true
keywords.workspace = true
categories.workspace = true
include = ["src/**/*.rs", "benches/**/*.rs", "Cargo.toml", "README.md"]

[dependencies]
cocli-protocol = { version = "0.2.0", path = "../cocli-protocol" }
serde.workspace = true
sha2.workspace = true
thiserror.workspace = true

[dev-dependencies]
criterion.workspace = true
tempfile.workspace = true

[[bench]]
name = "manifest"
harness = false

[lints]
workspace = true

