[package]
name = "cocli-protocol"
version = "0.2.0"
edition.workspace = true
rust-version.workspace = true
authors.workspace = true
description = "Stable JSON protocol types for colab-cli tools, file manifests, and continuation bundles."
license.workspace = true
readme = "README.md"
repository.workspace = true
homepage.workspace = true
keywords.workspace = true
categories.workspace = true
include = ["src/**/*.rs", "benches/**/*.rs", "Cargo.toml", "README.md"]

[dependencies]
serde.workspace = true
serde_json.workspace = true
thiserror.workspace = true

[dev-dependencies]
criterion.workspace = true
tempfile.workspace = true

[[bench]]
name = "continuation"
harness = false

[lints]
workspace = true
