[package]
name = "colab-cli"
version = "0.2.0"
edition.workspace = true
rust-version.workspace = true
authors.workspace = true
description = "Google Colab from the terminal with session, exec, fs, continuation, and agent-friendly tool commands."
license.workspace = true
readme = "README.md"
repository.workspace = true
homepage.workspace = true
keywords.workspace = true
categories.workspace = true
build = "build.rs"
include = [
    "src/**/*.rs",
    "benches/**/*.rs",
    "build.rs",
    "Cargo.toml",
    "README.md",
]

[[bin]]
name = "colab-cli"
path = "src/main.rs"

[features]
default = []
mcp = []

[dependencies]
base64.workspace = true
chrono.workspace = true
clap.workspace = true
clap_complete.workspace = true
cocli-colab = { version = "0.2.0", path = "../cocli-colab" }
cocli-core = { version = "0.2.0", path = "../cocli-core" }
cocli-fs = { version = "0.2.0", path = "../cocli-fs" }
cocli-protocol = { version = "0.2.0", path = "../cocli-protocol" }
cocli-tools = { version = "0.2.0", path = "../cocli-tools" }
colored.workspace = true
crossterm.workspace = true
dialoguer.workspace = true
dirs.workspace = true
dotenvy.workspace = true
futures-util.workspace = true
getrandom.workspace = true
indicatif.workspace = true
obfstr.workspace = true
reqwest.workspace = true
serde.workspace = true
serde_json.workspace = true
sha2.workspace = true
tabled.workspace = true
thiserror.workspace = true
tokio.workspace = true
tokio-tungstenite.workspace = true
toml.workspace = true
url.workspace = true
urlencoding.workspace = true
uuid.workspace = true

[dev-dependencies]
criterion.workspace = true
tempfile.workspace = true
tokio-test.workspace = true

[[bench]]
name = "hot_paths"
harness = false

[lints]
workspace = true
